<resources>
  <string name="app_name">GlobeMed Fit</string>
  <string name="fb_login_protocol_scheme" translatable="false">fb304078090067926</string>
  <string name="facebook_app_id" translatable="false">304078090067926</string>
  <string name="shared_file_provider" translatable="false">com.nguyenhoanglam.imagepicker.provider.gmfit</string>
  <string name="password_requirements_regex" translatable="false">^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z]).{8,15}$</string>
  <string name="submit">Submit</string>
  <string name="reset_password">Reset Password</string>
  <string name="search">Search&#8230;</string>
  <string name="OK">OK</string>
  <string name="settings">Settings</string>
  <string name="password_format_wrong">Password between 8 - 15 characters. Must contain at least 1 upper, 1 lower case letter, and a number</string>
  <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
  <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.
    </string>
  <string name="please_wait_dialog_message">Please wait…</string>
  <string name="ok">OK</string>
  <string name="menu_item_calendar_today">Today\'s\nvalues</string>
  <string name="finish_setup">Finish Setup</string>
  <string name="next_step">Next Step</string>
  <string name="previous_page">Back</string>
  <string name="accept_ok">OK</string>
  <string name="decline_cancel">Cancel</string>
  <string name="no_internet_conection_dialog_title">Failed to connect</string>
  <string name="no_internet_connection_dialog_message">Please check your Internet connection and try again.</string>
  <string name="server_error_got_returned">The server returned an error, please try again later.
    </string>
  <string name="fitness_tab_title">Fitness</string>
  <string name="nutrition_tab_title">Nutrition</string>
  <string name="health_tab_title">Health</string>
  <string name="directory_tab_title">Directory</string>
  <string name="profile_tab_title">Profile</string>
  <string name="sign_out">Sign out</string>
  <string name="signing_out_dialog_title">Signing Out</string>
  <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
  <string name="sign_in_button">Sign In</string>
  <string name="sign_up_button">Sign Up</string>
  <string name="already_signed_up">Already a user? Sign in</string>
  <string name="sign_up_activity_title">Sign Up</string>
  <string name="field_empty_error_message">Can\'t be empty</string>
  <string name="first_name_empty_error">First name can\'t be empty</string>
  <string name="last_name_empty_error">Last name can\'t be empty</string>
  <string name="email_empty_error">Email address can\'t be empty</string>
  <string name="password_empty_error">Passsword can\'t be empty</string>
  <string name="field_invalid_email_error">Email address is not valid</string>
  <string name="field_password_too_short_error">Password too short, must be at least 8 characters long</string>
  <string name="email_address_label">Email Address</string>
  <string name="password_hint">Password</string>
  <string name="confirm_password_hint">Confirm Password</string>
  <string name="create_account_button">Create Account</string>
  <string name="creating_account_TOS">Check here to indicate that you have read and agreed to our service &lt;u>terms and conditions &amp; privacy policy&lt;u>.</string>
  <string name="accept_TOS_error">Please accept the Terms and Conditions to proceed.</string>
  <string name="signing_up_dialog_title">Registering a new account</string>
  <string name="email_already_taken_api_response">Email already in use, please choose a different email.</string>
  <string name="signup_failed_alert_dialog_title">Registration failed</string>
  <string name="first_name_hint">First Name</string>
  <string name="last_name_hint">Last Name</string>
  <string name="existing_password_hint">Password</string>
  <string name="sign_in_activity_title">Sign In</string>
  <string name="forgot_password_button">&lt;u>Forgot Password?&lt;u></string>
  <string name="signing_in_dialog_title">Logging in</string>
  <string name="error_occurred_dialog_title">An Error Occurred</string>
  <string name="login_failed_wrong_credentials">Wrong email and password combination, please try again.</string>
  <string name="error_email_address_not_valid">The email address you entered is not valid. Please try again.</string>
  <string name="fill_in_credentials_to_sign_in">Please fill in your email and password</string>
  <string name="show_password">Show</string>
  <string name="hide_password">Hide</string>
  <string name="forgot_password_activity_title">Forgot Password</string>
  <string name="forgot_password_reset_hint">Please enter your email address below. We will send you instructions to reset your password.</string>
  <string name="reset_password_activity_title">Reset Password</string>
  <string name="reset_password_enter_code_hint">We sent the verification code to your email address, enter it below to be able to choose a new
        password
    </string>
  <string name="password_change_successful">Your password was changed successfully.</string>
  <string name="verify_account_hint">We\'ve just sent a verification code to your email address, please enter that code below to complete the
        registration process.
    </string>
  <string name="verification_code_hint">Verification code</string>
  <string name="wrong_verification_code">The code you provided is incorrect.</string>
  <string name="verifying_email_dialog_title">Verifying email address</string>
  <string name="verification_required_title">Verification Required</string>
  <string name="verification_required_message">Please enter the verification code we sent\nyou via e-mail.</string>
  <string name="setup_my_profile_button">Setup My Profile</string>
  <string name="tos_activity_title">Terms of Use</string>
  <string name="terms_of_use_value" translatable="false">Lorem ipsum dolor sit amet, accumsan praesent vulputate has ad, vel ne liber zril. Ea qui audire suavitate, ut stet
        debitis complectitur nec. Ex vim wisi mutat denique, his sint congue ne. Ut duo partiendo percipitur, et eum dolorum mandamus. Mea dicam vivendum ex, ad
        labitur quaerendum cum.

        Stet reprehendunt eu vel, usu hinc dolor ad. Vero legimus mel et, nam nibh expetenda no, cu ullum aeque sed. Vel vitae maiorum periculis ex, modus
        tantas populo mei ea. Per ne laudem quidam feugiat.

        Ancillae nominati consulatu vim te, id vim duis inimicus conceptam. Mea ancillae vulputate at, nam id feugait reprimique. Ut utinam invidunt vulputate
        nam. Sit nisl offendit id, vel eloquentiam intellegebat in. Duo singulis splendide ex, est albucius nominavi deserunt ad.

        Summo vivendo ei has, ne enim putant fastidii qui. Vis at brute soleat nostrum, ceteros assentior sed eu. At pro commodo inermis atomorum, mei eu reque
        laudem nominati. Ut inani instructior vix, per vidisse adolescens ea.

        Sit eleifend partiendo temporibus ad, mel reque adversarium an, vix nibh accommodare concludaturque ne. Sed no inani nonumy vocibus, te sed dicunt
        invenire partiendo. Mei id meliore persecuti, ridens iuvaret usu no. Brute novum altera cum ne. Id his labore vulputate dissentiet, ut mei oportere
        neglegentur, malis petentium ad vim. Sit eu quidam regione erroribus, usu an ullum errem deserunt.
        <a href="http://www.globemedlebanon.com">http://www.globemedlebanon.com</a>
    </string>
  <string name="welcome_globemed_title">Welcome to GlobeMed Fit</string>
  <string name="welcome_globemed_message">An all-in-one app that helps you manage your health.\nSwipe left for more details.</string>
  <string name="fitness_tracking_title">Automatic Fitness Tracking</string>
  <string name="fitness_tracking_message">Keep an eye on your day-to-day activities through\nthe customizable widgets and charts.</string>
  <string name="food_logging_title">Food Logging</string>
  <string name="food_logging_message">Search, scan or log your meals and track your daily\nintake of calories, protein, carbs and more.</string>
  <string name="health_tracking_title">Health Tracking &amp; Monitoring</string>
  <string name="health_tracking_message">Monitor your health and keep a record of all\nyour medical tests.</string>
  <string name="insurance_slider_section_title">Insurance</string>
  <string name="insurance_slider_section_message">Manage all your insurance requests,\nreimbursements and claims,\nand benefit from a directory list of clinics.</string>
  <string name="daily_goals_section_title">Daily Goals</string>
  <string name="daily_goals_section_message">Complete your daily goals.</string>
  <string name="get_started_title">Let\'s Get Started</string>
  <string name="get_started_message">Sign up for the GlobeMed Fit app via e-mail\nor through Facebook. If you\'ve already signed up,\nyou can sign in below.</string>
  <string name="setup_profile_activity_title">Setup Profile</string>
  <string name="choose_country_hint">Choose your country</string>
  <string name="connect_google_fit">Connect to Google Fit</string>
  <string name="connect_google_fit_hint">Connecting to Google Fit allows automatic tracking of your daily activities</string>
  <string name="connect_google_fit_learn">Learn more about Google Fit</string>
  <string name="choose_goal_hint">Choose your goal</string>
  <string name="choose_lifestyle_hint">Choose your Lifestyle</string>
  <string name="choose_measurement_unit">Units of Measurement</string>
  <string name="measurement_unit_metric">Metric</string>
  <string name="measurement_unit_imperial">Imperial</string>
  <string name="goal_purpose_lose_weight">Lose Weight</string>
  <string name="goal_purpose_maintain_weight">Maintain Weight</string>
  <string name="goal_purpose_gain_weight">Gain Weight</string>
  <string name="notifications_and_location_title">Notifications &amp; Location</string>
  <string name="enable_notifications_location_hint">To further improve your GlobeMed Fit experience, we would like to send you push notifications and
        access your location
    </string>
  <string name="enable_notifications_location_permissions">Enable Notifications &amp; Location</string>
  <string name="gender_hint">Gender</string>
  <string name="date_of_birth_hint">Date of Birth</string>
  <string name="blood_type_hint">Blood Type</string>
  <string name="weight_hint">Weight</string>
  <string name="height_hint">Height</string>
  <string name="insurance_section_title">Insurance</string>
  <string name="add_your_remarks_here">Add your remarks here</string>
  <string name="fill_in_the_required_fields_below">Fill in the required fields below</string>
  <string name="attach_all_the_required_documents_below">Attach all the required documents below</string>
  <string name="your_info_section_title">Your Info</string>
  <string name="full_name_label">Full Name</string>
  <string name="card_number_label">Card Number</string>
  <string name="risk_carrier_label">Risk Carrier</string>
  <string name="request_details_label">Request Details</string>
  <string name="title_and_description_label">Title and Description</string>
  <string name="attach_photo_hint">Attach Photo (optional)</string>
  <string name="submit_inquiry_request_title_hint">Request Title</string>
  <string name="submit_inquiry_request_description_hint">Description</string>
  <string name="medical_report">Medical Report</string>
  <string name="identity_card">Identity Card</string>
  <string name="optional_image">Optional Image</string>
  <string name="doctor_confirmation">Doctor Confirmation</string>
  <string name="invoice">Invoice</string>
  <string name="passport">Passport</string>
  <string name="other_documents">Other Documents (optional)</string>
  <string name="test_results">Test Results (optional)</string>
  <string name="email_address_hint">Enter your email address</string>
</resources>