<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_submit_reimbursement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/insurance_background"
    android:orientation="vertical"
    tools:context="com.mcsaatchi.gmfit.insurance.activities.approval_request.SubmitApprovalRequestActivity"
    >

  <include layout="@layout/app_toolbar"/>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <com.mcsaatchi.gmfit.insurance.widget.ItemHeader
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          custom:header_text="@string/fill_in_the_required_fields_below"
          />

      <com.mcsaatchi.gmfit.insurance.widget.CustomToggle
          android:id="@+id/categoryInOutToggle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />

      <com.mcsaatchi.gmfit.insurance.widget.CustomPicker
          android:id="@+id/reimbursementSubcategory"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />

      <com.mcsaatchi.gmfit.insurance.widget.CustomPicker
          android:id="@+id/reimbursementServiceDate"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />

      <EditText
          android:id="@+id/remarksET"
          android:layout_width="match_parent"
          android:layout_height="120dp"
          android:background="@color/much_lighter_gray"
          android:hint="@string/add_your_remarks_here"
          android:paddingLeft="20dp"
          android:paddingRight="20dp"
          />

      <View
          android:layout_width="match_parent"
          android:layout_height="20dp"
          android:background="@color/offwhite_background_gray"
          />

      <com.mcsaatchi.gmfit.insurance.widget.ItemHeader
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          custom:header_text="@string/attach_all_the_required_documents_below"
          />

      <com.mcsaatchi.gmfit.insurance.widget.CustomAttachmentPicker
          android:id="@+id/medicalReportImagesPicker"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          custom:header_text="@string/medical_report"
          />

      <com.mcsaatchi.gmfit.insurance.widget.CustomAttachmentPicker
          android:id="@+id/invoiceImagesPicker"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          custom:header_text="@string/invoice"
          />

      <com.mcsaatchi.gmfit.insurance.widget.CustomAttachmentPicker
          android:id="@+id/identityCardImagesPicker"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          custom:header_text="@string/identity_card"
          />

      <com.mcsaatchi.gmfit.insurance.widget.CustomAttachmentPicker
          android:id="@+id/passportImagesPicker"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          custom:header_text="@string/passport"
          />

      <com.mcsaatchi.gmfit.insurance.widget.CustomAttachmentPicker
          android:id="@+id/testResultsImagesPicker"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          custom:header_text="@string/test_results"
          />

      <com.mcsaatchi.gmfit.insurance.widget.CustomAttachmentPicker
          android:id="@+id/otherDocumentsImagesPicker"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          custom:header_text="@string/other_documents"
          />

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="100dp"
          android:background="@color/offwhite_background_gray"
          >

        <Button
            android:id="@+id/submitApprovalRequestBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/buttons_blue"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />
      </RelativeLayout>

    </LinearLayout>
  </ScrollView>
</LinearLayout>