<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_one"
        android:icon="@drawable/ic_bottom_bar_fitness_inactive"
        android:title="@string/fitness_tab_title"/>

    <item
        android:id="@+id/item_two"
        android:icon="@drawable/ic_bottom_bar_nutrition_inactive"
        android:title="@string/nutrition_tab_title"/>

    <!--<item-->
        <!--android:id="@+id/item_three"-->
        <!--android:icon="@drawable/ic_favorite_white_24dp"-->
        <!--android:title="@string/health_tab_title"/>-->

    <!--<item-->
        <!--android:id="@+id/item_four"-->
        <!--android:icon="@drawable/ic_update_white_24dp"-->
        <!--android:title="@string/directory_tab_title"/>-->

    <item
        android:id="@+id/item_five"
        android:icon="@drawable/ic_bottom_bar_profile"
        android:title="@string/profile_tab_title"/>

</menu>